MMA-6243 Fjern SOAP, legg inn tidligere transitiv validator-dependency